--- a/404.html
+++ b/404.html
@@ -1317,8 +1317,8 @@
 	<script src="https://cdn.jsdmirror.com/npm/katex@0.16.9/dist/katex.min.js"></script>
 	<script src="https://cdn.jsdmirror.com/npm/katex@0.16.9/dist/contrib/auto-render.min.js"></script>
 	<script>
-		const supabaseUrl = 'https://ynfnkmbyhylceohatokf.supabase.co'
-		const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InluZm5rbWJ5aHlsY2VvaGF0b2tmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAxOTA0NTksImV4cCI6MjA4NTc2NjQ1OX0.nYxyZF8RYJ0PyH-ha0aqrbqd_XuUOrslF4p-hRK-6hs'
+		const supabaseUrl = 'https://nyhchryguyjykujubqnh.supabase.co'
+		const supabaseKey = 'sb_publishable_0owrykQHTggxWzSq4uJppg_kHgSEuWC'
 		const Supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 		let currentUser = null;
 		let articleToDelete = null;
