--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script>
 		document.title = 'Loading | Banglee Blog';
 	</script>
-	<link rel="icon" href="https://cdn.luogu.com.cn/upload/usericon/1393230.png" type="image/png">
+	<link rel="icon" href="https://cdn.luogu.com.cn/upload/usericon/681292.png" type="image/png">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdmirror.com/npm/@fortawesome/fontawesome-free@7.1.0/css/all.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdmirror.com/npm/lxgw-wenkai-screen-webfont@1.7.0/style.min.css">
@@ -2066,16 +2066,23 @@
 			textarea.selectionStart = start + before.length;
 			textarea.selectionEnd = end + before.length;
 		}
+        // 修改：使用 Markdown 语法而非 HTML，并修复对象键值
 		function insertBlock(type) {
 		    const blocks = {
-		        tip: ["<div class='custom-block tip'>\n  <p class='custom-block-title'>TIP</p>\n  ", "\n</div>"],
-		        warning: ["<div class='custom-block warning'>\n  <p class='custom-block-title'>WARNING</p>\n  ", "\n</div>"],
-		        danger: ["<div class='custom-block danger'>\n  <p class='custom-block-title'>CAUTION</p>\n  ", "\n</div>"],
-		        highlight: ["<span class='marker-text-highlight'>", "</span>"],
-		        badge: ["<span class='Badge tip'>", "</span>"]
+		        note: ["::: note\n", "\n:::"],
+		        tip: ["::: tip\n", "\n:::"],
+		        warning: ["::: warning\n", "\n:::"],
+		        danger: ["::: danger\n", "\n:::"],
+		        highlight: ["==", "=="], 
+		        badge: ["<span class='Badge tip'>", "</span>"] // 徽章建议保持 HTML 除非写更复杂的解析
 		    };
-		    const [before, after] = blocks[type];
-		    insertText(before, after);
+            // 确保 type 存在，防止报错
+            if (blocks[type]) {
+		        const [before, after] = blocks[type];
+		        insertText(before, after);
+            } else {
+                console.error("Unknown block type:", type);
+            }
 		}
 		function escapeHtml(str) {
 			return str.replace(/&/g, '&amp;')
@@ -2136,6 +2143,23 @@
 			}
 		}
 		function renderContent(markdown, container) {
+            // 新增：解析高亮语法 ==text==
+            markdown = markdown.replace(/==([^=]+)==/g, '<span class="marker-text-highlight">$1</span>');
+
+            // 新增：解析 ::: type title 语法
+            // 正则匹配 ::: type [可选标题] \n 内容 \n :::
+            markdown = markdown.replace(/::: (\w+)(?: (.*))?\n([\s\S]*?)\n:::/g, function(match, type, title, content) {
+                // 如果没有标题，默认使用 Type 大写
+                let displayTitle = title ? title.trim() : type.toUpperCase();
+                // 递归解析内部 Markdown 内容 (这就允许在提示框里写粗体、列表等)
+                // 注意：这里简单调用 marked.parse 可能会包裹一层 <p>，但在这个场景下通常是可以接受的
+                let parsedContent = marked.parse(content);
+                return `<div class="custom-block ${type}">
+                    <p class="custom-block-title">${displayTitle}</p>
+                    ${parsedContent}
+                </div>`;
+            });
+
 			const renderer = new marked.Renderer();
 			renderer.code = function (code, language) {
 				const escapedCode = escapeHtml(code);
