Adjust margin for code block container

--- a/index.html
+++ b/index.html
@@ -2196,7 +2196,7 @@
 		        const escapedCode = escapeHtml(code);
 		        const languageClass = language ? `language-${language}` : '';
 		        return `
-		            <div style="position: relative; margin: 20px 0;">
+		            <div style="position: relative; margin: 40px 0 70px 0;">
 		                <pre><code class="${languageClass}">${escapedCode}</code></pre>
 		                <button class="codecopy-btn" onclick="copyCode(this)" style="position: absolute; top: 10px; right: 10px; padding: 6px 12px; font-size: 0.85rem;">
 		                    <i class="fas fa-copy"></i>
